tests/baselines/reference/parserSymbolIndexer4.errors.txt
tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer4.ts(2,6): error TS1023: An index signature parameter type must be 'string', 'number', or an enum type.


==== tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer4.ts (1 errors) ====
    var x: {
        [s: symbol]: string;
         ~
!!! error TS1023: An index signature parameter type must be 'string', 'number', or an enum type.
    }